[package]
name = "colamd"
version = "0.1.0"
edition = "2021"
description = "Column approximate minimum degree ordering algorithm"
repository = "https://github.com/rwl/colamd_rs/"
license = "BSD-3-Clause"
categories = ["algorithms", "mathematics", "science"]

[dependencies]

[features]
nprint = []
debug = []
debug1 = ["debug"]
debug2 = ["debug1"]
debug3 = ["debug2"]
debug4 = ["debug3"]